--- a/pom.xml
+++ b/pom.xml
@@ -198,9 +198,7 @@
                         <configuration>
                             <serverId>ossrh</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                            <!-- After GA this flag can be set to true. When false requires to manually release the
-                                 artifacts from https://oss.sonatype.org/#stagingRepositories -->
-                            <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                         </configuration>
                     </plugin>
                 </plugins>
